done commission calculate
